--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,27 @@
 h1 {
-  color: blue;
+  color: black;
 }
 
 #form-wrapper {
+
   background-color: aliceblue;
   width: 330px;
   padding: 10px 10px;
 }
 
 #inventory-list {
+
   display:flex;
   flex-direction: column;
   flex-wrap: wrap;
 }
 
-#inventory-list-item {
-  border: 2px, solid, black;
-  background-color: blue;
+.inventory-list-item {
+  padding: 15px 15px;
+  border-style: solid;
+  border-color: black;
+  border-radius: 30px;
+  background-color: aliceblue;
 }
 
 li {
